Fix vertical align of menu icon

--- a/less/nav-scroll-core.less
+++ b/less/nav-scroll-core.less
@@ -60,6 +60,10 @@ div[data-nav-scroll="true"] {
         &.nav-scrollable-next {
             right: 0;
         }
+
+        > span {
+            vertical-align: middle;
+        }
     }
 
     .hammer-scrollbar {
